2009-07-22  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* plugin-class.cpp: Incorporate significant advances in debugging
	technology.

2009-07-20  Chris Toshok  <toshok@ximian.com>

	* plugin-class.cpp (MoonlightContentObject::Invoke): pass null for
	resource_base.
	(MoonlightContentObject::Invoke): same.

	* plugin.h|cpp: add resource base parameters to all the XamlLoader
	calls, and pass stream->url for that value when we have it.

	* cbinding.h: regen.
	
2009-07-20  Chris Toshok  <toshok@ximian.com>

	* plugin-class.cpp (MoonlightDependencyObjectObject::Invoke): add
	the fallback findName lookup here, since we removed it from
	DependencyObject::FindName.

2009-07-18  Jackson Harper  <jackson@ximian.com>

	* plugin-class.cpp:
	* plugin.h|cpp: Add a flag to import the default xmlns. Basically
	nothing sets this to true except for the JS CreateFromXaml
	function.

2009-07-17  Larry Ewing  <lewing@novell.com>

	* plugin.cpp:  get agressive about flushing loaded events to the
	plugin from splash elements.  Fixes 285,445.

2009-07-16  Larry Ewing  <lewing@novell.com>

	* plugin.cpp, plugin.h: rework the splash logic to handle document
	fragment references and get closer to emitting the correct events
	in the correct order.

	* plugin-class.cpp: use PluginInstance::IsLoaded instead of poking
	at the surface.

2009-07-17  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* cbinding.h: Regenerated.

2009-07-16  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* plugin.cpp: PluginInstance::UpdateSourceByReference: add a
	Deployment::SetCurrent.

2009-07-16  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* plugin-entry.cpp: Push/Pop the current deployment on every
	transition to the browser. Makes MS DRT #2003 not spew a lot
	of deployment mismatch warnings.

2009-07-15  Larry Ewing  <lewing@novell.com>

	* plugin.cpp: reconnect onload in LoadXAML and LoadXAP so that
	source changes reset the oneshot call.  Fixes DRT#21.

2009-07-13  Sebastien Pouliot  <sebastien at ximian.com> 
